Fixed the testimony person name overlapping Removed HTML 5 footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2051,6 +2051,7 @@ ul.actions li:first-child {
 
 .box.style1 {
 	padding: 3em 2em 3.5em 2em;
+	min-height: 330px;
 }
 
 .box.style1 h3 {
